--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>  
+  <head>
     <meta charset="utf-8" />
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 5</title>
@@ -8,6 +8,118 @@
     <script src="https://www.x3dom.org/download/x3dom.js"></script>
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
-</html>
+   <X3D style="left:0px; top:0px; width:100%; height:100%; border: none;">
+    <Scene>
+     <TimeSensor def='Time' cycleInterval='10' loop='true' enabled='true'></TimeSensor>
+     <TimeSensor DEF='Time2' cycleInterval='5' loop='true'> </TimeSensor>
+     <ColorInterpolator DEF='Color' key='0 0.33 0.66 1'
+               keyValue='0.77 0.55 0, 0 0.77 0.55, 0.55 0 0.77, 0.77 0.55 0'>
+     </ColorInterpolator>
+
+     <Background backUrl="Textures/StarsTexture.jpg"></Background>
+
+     <OrientationInterpolator def='OrientInterp' key='0 0.125 0.25 0.375 0.5 0.675 0.75 0.875 1' keyValue='0 1 0 4.71239, 0 1 0 5.49779, 0 1 0 0, 0 1 0 0.785398, 0 1 0 1.5708, 0 1 0 2.35619, 0 1 0 3.14159, 0 1 0 3.92699, 0 1 0 4.71239'></OrientationInterpolator>
+     <PositionInterpolator def='TranslationInterp' key='0 0.125 0.25 0.375 0.5 0.675 0.75 0.875 1' keyValue='0 -2 -5.4, -4.2 -2 -4.2, -5.4 -2 0, -4.2 -2 4.2, 0 -2 5.4, 4.2 -2 4.2,  5.4 -2 0, 4.2 -2 -4.2, 0 -2 -5.4'></PositionInterpolator>
+
+     <transform def="snowman" rotation="0 1 0 -0.7853">
+     <Shape>
+     <PointSet>
+      <Color color='0 0 0, 0 0 0, 0 0 0, 0 0 0, 0 0 0, 0 0 0, 0 0 0, 0 0 0'></Color>
+      <Coordinate point='-0.2 1.6 0.72
+                         -0.3 1.6 0.72
+                         -0.2 1.5 0.72
+                         -0.3 1.5 0.72
+                         0.2 1.6 0.72
+                         0.3 1.6 0.72
+                         0.2 1.5 0.72
+                         0.3 1.5 0.72'></Coordinate>
+     </PointSet>
+     </Shape>
+
+     <transform translation="0 1.2 0.7" scale="0.1 0.1 0.1" rotation="1 0 0 1.57">
+      <Shape>
+       <Appearance>
+        <Material emissiveColor='0.76 0.43 0.15'/>
+       </Appearance>
+       <IndexedLineSet coordIndex='0 1 2 0 3 4 0 1 2 3 4 1-1'>
+        <Coordinate point='0 10 0
+                           1 0 1
+                           1 0 -1
+                           -1 0 -1
+                           -1 0 1'/>
+       </IndexedLineSet>
+      </Shape>
+     </transform>
+
+     <transform translation="0 0.5 0" scale="0.7 0.7 0.7">
+      <Shape>
+        <appearance def="snow">
+         <imagetexture url="Textures/Texture.jpg" repeats="true" repeatt="true" ></imagetexture>
+         <texturetransform scale="30 30"></texturetransform>
+        </appearance>
+       <IndexedFaceSet colorPerVertex="true" convex="true"
+            creaseAngle="0" normalPerVertex="true" solid="false"
+            coordIndex="0 1 5 4 -1
+                        1 2 6 5 -1
+                        2 3 7 6 -1
+                        3 0 4 7 -1
+                        4 5 6 7 -1">
+        <Coordinate def="cube" point='-1 0 1
+                           1 0 1
+                           1 0 -1
+                           -1 0 -1
+                           -1 2 1
+                           1 2 1
+                           1 2 -1
+                           -1 2 -1'></Coordinate>
+       </IndexedFaceSet>
+      </Shape>
+     </transform>
+
+     <transform translation="0 -1.1 0" scale="0.85 0.85 0.85">
+      <Shape>
+        <appearance def="snow">
+         <imagetexture url="Textures/snow.jpg" repeats="true" repeatt="true" ></imagetexture>
+         <texturetransform scale="30 30"></texturetransform>
+        </appearance>
+       <IndexedTriangleSet index='0 1 4 1 4 5 5 1 2 5 6 2 6 2 3 6 3 7 7 3 0 7 4 0 4 5 6 6 7 4' solid='false'>
+        <Coordinate use="cube"></Coordinate>
+       </IndexedTriangleSet>
+      </Shape>
+     </transform>
+
+     <transform translation="0 -3 0">
+      <Shape>
+        <appearance def="snow">
+         <imagetexture url="Textures/Texture.jpg" repeats="true" repeatt="true" ></imagetexture>
+         <texturetransform scale="30 30"></texturetransform>
+        </appearance>
+       <IndexedTriangleStripSet index="0 1 4 5 -1 1 2 5 6 -1 2 3 6 7 -1 3 0 7 4 -1 5 6 4 7 -1" solid="true">
+        <Coordinate use="cube"></Coordinate>
+       </IndexedTriangleStripSet>
+      </Shape>
+     </transform>
+   </transform>
+
+   <transform translation="0 -5 0">
+    <Shape>
+      <appearance def="snow">
+       <Material DEF='ground' diffuseColor='0 0 0'></Material>
+      </appearance>
+     <box size="20 0.2 20"></box>
+    </Shape>
+   </transform>
+
+
+   <route fromNode='Time' fromField='fraction_changed' toNode='OrientInterp' toField='set_fraction'></route>
+   <route fromNode='OrientInterp' fromField='value_changed' toNode='snowman' toField='set_rotation'></route>
+
+     <route fromNode='Time' fromField='fraction_changed' toNode='TranslationInterp' toField='set_fraction'></route>
+     <route fromNode='TranslationInterp' fromField='value_changed' toNode='snowman' toField='set_translation'></route>
+
+     <route fromNode='Time2' fromField='fraction_changed' toNode='Color' toField='set_fraction'></route>
+     <route fromNode='Color' fromField='value_changed' toNode='ground' toField='set_diffuseColor'></route>
+    </Scene>
+   </X3D>
+  </body>
+  </html>
