--- a/index.html
+++ b/index.html
@@ -1,13 +1,122 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE HTML>
 <html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 5</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+<head>
+  <meta charset="utf-8">
+  <title>Lab3</title>
+  <script src="https://www.x3dom.org/download/dev/x3dom.js"></script>
+  <link rel="stylesheet" href="https://www.x3dom.org/download/dev/x3dom.css">
+  <style>
+     body {font-family: arial;font-family: arial;padding:0;margin:0;}
+     X3D{left:0px; top:0px; width:100%; height:100%; border:none;}
+  </style>
+</head>
+<body>
+<x3d showstat="false">
+ <scene>
+   <TimeSensor DEF='Time' cycleInterval='5' loop='true'> </TimeSensor>
+   <ColorInterpolator DEF='ColInt' key='0 0.33 0.66 1' keyValue='1 0 0, 0 1 0, 0 0 1, 1 0 0'></ColorInterpolator>
+   <OrientationInterpolator DEF='OrientInt' key='0 0.5 1' keyValue='0 0 1 0, 0 0 1 -3.14,0 0 1 -6.28'></OrientationInterpolator>
+   <Transform DEF='Trans'>
+     <shape>
+       <IndexedLineSet coordIndex="0 1 –1 0 2 -1 0 3 -1 0 4 -1 0 5 -1 0 6 -1
+                                   7 8 -1 9 10 -1 11 12 -1 13 14 -1
+                                   15 16 -1 15 17 -1 16 17 -1 15 18 -1 16 18 -1 17 18 -1
+                                   19 20 -1 19 21 -1 20 21 -1 19 22 -1 20 22 -1 21 22 -1
+                                   23 24 -1 23 25 -1 24 25 -1 23 26 -1 24 26 -1 25 26 -1
+                                   27 28 -1 27 29 -1 28 29 -1 27 30 -1 28 30 -1 29 30 -1
+                                   31 32 -1 31 33 -1 32 33 -1 31 34 -1 32 34 -1 33 34 -1
+                                   35 36 -1 35 37 -1 36 37 -1 35 38 -1 36 38 -1 37 38 -1
+                                   39 40 -1 39 41 -1 40 41 -1 39 42 -1 40 42 -1 41 42 -1
+                                   43 44 -1 43 45 -1 44 45 -1 43 46 -1 44 46 -1 45 46 -1"
+                       colorPerVertex='true'>
+       <Coordinate point="0 0 0,
+                          0 0 6, 0 0 -6,
+                          6 0 0, -6 0 0,
+                          0 6 0, 0 -6 0,
+                          1.3 1.3 1.3, -1.3 -1.3 -1.3,
+                          1.3 1.3 -1.3, -1.3 -1.3 1.3,
+                          -1.3 1.3 1.3, 1.3 -1.3 -1.3,
+                          1.3 -1.3 1.3, -1.3 1.3 -1.3,
+                          6 0 0, 0 6 0, 0 0 6, 1.3 1.3 1.3,
+                          -6 0 0, 0 6 0, 0 0 6, -1.3 1.3 1.3,
+                          6 0 0, 0 -6 0, 0 0 6, 1.3 -1.3 1.3,
+                          6 0 0, 0 6 0, 0 0 -6, 1.3 1.3 -1.3,
+                          -6 0 0, 0 -6 0, 0 0 6, -1.3 -1.3 1.3,
+                          -6 0 0, 0 6 0, 0 0 -6, -1.3 1.3 -1.3,
+                          6 0 0, 0 -6 0, 0 0 -6, 1.3 -1.3 -1.3,
+                          -6 0 0, 0 -6 0, 0 0 -6, -1.3 -1.3 -1.3"></Coordinate>
+      </IndexedLineSet>
+     </shape>
+     <shape>
+       <Appearance><Material DEF='Mat' diffuseColor="1 0 0"></Material></Appearance>
+       <IndexedFaceSet ccw="true" colorPerVertex="true" convex="true"
+                       creaseAngle="0" normalPerVertex="true" solid="false"
+                       coordIndex="0 1 2 -1 0 1 3 -1 0 2 3 -1
+                                   4 5 6 -1 4 5 7 -1 4 6 7 -1
+                                   8 9 10 -1 8 9 11 -1 8 10 11 -1
+                                   12 13 14 -1 12 13 15 -1 12 14 15 -1
+                                   16 17 18 -1 16 17 19 -1 16 18 19 -1
+                                   20 21 22 -1 20 21 23 -1 20 22 23 -1
+                                   24 25 26 -1 24 25 27 -1 24 26 27 -1
+                                   28 29 30 -1 28 29 31 -1 28 30 31 -1">
+         <Coordinate point="-1 -1 -1, -5 0 0, 0 0 -5, 0 -5 0,
+                            1 1 1, 5 0 0, 0 0 5, 0 5 0,
+                            1 1 -1, 5 0 0, 0 0 -5, 0 5 0,
+                            -1 -1 1, -5 0 0, 0 -5 0, 0 0 5,
+                            -1 1 1, -5 0 0, 0 5 0, 0 0 5,
+                            1 -1 -1, 5 0 0, 0 -5 0, 0 0 -5,
+                            1 -1 1, 5 0 0, 0 -5 0, 0 0 5,
+                            -1 1 -1, -5 0 0, 0 5 0, 0 0 -5"></Coordinate>
+       </IndexedFaceSet>
+     </shape>
+   </Transform>
+   <transform DEF="decore1">
+   <shape>
+     <appearance><material diffuseColor='#000'></material></appearance>
+     <Sphere radius="0.2"></Sphere>
+   </shape>
+   </transform>
+
+   <transform DEF="decore2">
+   <shape>
+     <appearance><material diffuseColor='#000'></material></appearance>
+     <Sphere radius="0.2"></Sphere>
+   </shape>
+   </transform>
+
+   <transform DEF="decore3">
+   <shape>
+     <appearance><material diffuseColor='#000'></material></appearance>
+     <Sphere radius="0.2"></Sphere>
+   </shape>
+   </transform>
+
+   <transform DEF="decore4">
+   <shape>
+     <appearance><material diffuseColor='#000'></material></appearance>
+     <Sphere radius="0.2"></Sphere>
+   </shape>
+   </transform>
+
+   <PositionInterpolator DEF='decor_position1' key='0 0.25 0.5 0.75 1' keyValue='-10 0 0, 0 10 0, 10 0 0, 0 -10 0, -10 0 0, ' />
+   <PositionInterpolator DEF='decor_position2' key='0 0.25 0.5 0.75 1' keyValue='10 0 0, 0 -10 0, -10 0 0, 0 10 0, 10 0 0, ' />
+   <PositionInterpolator DEF='decor_position3' key='0 0.25 0.5 0.75 1' keyValue='0 -10 0, -10 0 0, 0 10 0, 10 0 0, 0 -10 0, ' />
+   <PositionInterpolator DEF='decor_position4' key='0 0.25 0.5 0.75 1' keyValue='0 10 0, 10 0 0, 0 -10 0, -10 0 0, 0 10 0, ' />
+
+   <ROUTE fromNode='Time' fromField='fraction_changed' toNode='ColInt' toField='set_fraction'></ROUTE>
+   <ROUTE fromNode='ColInt' fromField='value_changed' toNode='Mat' toField='set_diffuseColor'></ROUTE>
+   <ROUTE fromNode='Time' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'></ROUTE>
+   <ROUTE fromNode='OrientInt' fromField='value_changed' toNode='Trans' toField='set_rotation'></ROUTE>
+
+   <ROUTE fromNode='Time' toNode='decor_position1' fromField='fraction_changed' toField='set_fraction'></ROUTE>
+ 	 <ROUTE fromNode='decor_position1' toNode='decore1' fromField='value_changed'  toField='translation'></ROUTE>
+   <ROUTE fromNode='Time' toNode='decor_position2' fromField='fraction_changed' toField='set_fraction'></ROUTE>
+ 	 <ROUTE fromNode='decor_position2' toNode='decore2' fromField='value_changed'  toField='translation'></ROUTE>
+   <ROUTE fromNode='Time' toNode='decor_position3' fromField='fraction_changed' toField='set_fraction'></ROUTE>
+ 	 <ROUTE fromNode='decor_position3' toNode='decore3' fromField='value_changed'  toField='translation'></ROUTE>
+   <ROUTE fromNode='Time' toNode='decor_position4' fromField='fraction_changed' toField='set_fraction'></ROUTE>
+ 	 <ROUTE fromNode='decor_position4' toNode='decore4' fromField='value_changed'  toField='translation'></ROUTE>
+ </scene>
+</x3d>
+</body>
 </html>
