--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <title>Lab4</title>
-  <link rel="stylesheet" type="text/css" href="../x3d/x3dom.css"></link>
-  <script type="text/javascript" src="../x3d/x3dom-full.js"></script>
+  <title>Lab5</title>
+  <link rel="stylesheet" type="text/css" href="./x3d/x3dom.css"></link>
+  <script type="text/javascript" src="./x3d/x3dom-full.js"></script>
 
 </head>
 <body>
